# physic_particle_simlation

./: CMakeLists.txt  CmakePresetes.json  ParticleSystem.cpp  et --hard <commit-hash>  h origin main --force  readme.md
src/: BorderInfo.cpp  BorderInfo.hpp  CalcWindow.cpp  CalcWindow.hpp  Graphs_new.cpp  Graphs_new.hpp  Grid.cpp  Grid.hpp  PS_ThreadManager.cpp  PS_ThreadManager.hpp  Particle.cpp  Particle.hpp  ParticleSystem.cpp  ParticleSystem.hpp  PerformanceProfiler.hpp  Physics.cpp  Physics.hpp  Profiler.hpp  Renderer.cpp  Renderer.hpp  Report.hpp  Threads_updateF.hpp  Vector2D.hpp  global_var.hpp  graphical_items.cpp  graphical_items.hpp  interact_with_simulation.hpp  main.cpp  simulation_examples.cpp  simulation_examples.hpp  user_interactions.cpp  user_interactions.hpp  user_interactions_new.cpp  user_interactions_new.hpp  user_interface.cpp  user_interface.hpp
tests/: CMakeLists.txt  testGlobalVar.cpp  test_CalcWIndow.cpp  test_Grid_CalWindow.cpp  test_complete_system.cpp  test_main.cpp  test_physics.cpp  test_user_interractions.cpp
